<resources>
    <string name="app_name">Touch Sample Synth</string>
    <string name="button_start_content_descr">Button to start the audio engine</string>
    <string name="button_stop_content_descr">Button to stop the audio engine</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alert_dialog_really_delete">really delete?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="editToggleEdit">Edit</string>
    <string name="editTogglePlay">Play</string>
    <string name="sine_mono_synth_name">SineMonoSynth</string>
    <string name="volume_envelope">Volume Envelope</string>
    <string name="volume">Volume</string>
    <string name="filter_envelope">Filter Envelope</string>
    <string name="touch_to_volume">Vol. Mod</string>
    <string name="synth_attack">Attack</string>
    <string name="synth_decay">Decay</string>
    <string name="synth_sustain">Sustain</string>
    <string name="synth_release">Release</string>
    <string name="moog_filter">24db/Oct Filter</string>
    <string name="oscillator_1">Oscillator 1</string>
    <string name="osc_1_symmetry">Osc 1 PW</string>
    <string name="osc_2_symmetry">Osc 2 PW</string>
    <string name="oscillator_2">Oscillator 2</string>
    <string name="filter_cutoff">Cutoff</string>
    <string name="filter_resonance">Resonance</string>
    <string name="modulation">Touch Modulation</string>
    <string name="menuitem_playpage">Play</string>
    <string name="menuitem_soundgenerator">Instruments</string>
    <string name="sampler_name">Sampler</string>
    <string name="sampler_loop_switch">Loop section</string>
    <string name="sampler_triggered_switch">Triggered</string>
    <string name="sampler_load_sample">Load sample</string>
    <string name="sampler_select_sample">Choose Wav-File</string>
    <string name="octave">Octave</string>
    <string name="detune">Detune</string>
    <string name="envelope_amount">Env. Amt.</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="simple_subtractive_synth_name">Simple Sub Synth</string>
    <string name="looper_name">Looper</string>
    <string name="looper_record_gain">Rec. Gain</string>
    <string name="content_description_instrument_icon">Instrument Icon</string>
    <string name="content_description_instrument_speaker">Loudspeaker</string>
    <string name="content_description_instrument_processor">CPU Icon</string>
    <string name="instrument_name">Instrument Name</string>
    <string name="instrument_poly_sat">Polyphonic saturate</string>
    <string name="instrument_poly_ns">Polyphonic note steal</string>
    <string name= "instrument_mono">Monophonic</string>
    <string name="settings">Settings</string>
    <string name="scenes">Scenes</string>
    <string name="add_new_touchelement">Add New Touchelement</string>
    <string name="scene_name">Name of the Scene</string>
    <string name="nr_voices_description">The number of voices the instrument should be able to play simultaneously</string>
    <string name="framesPerDataCallbackDescription">Audio Chunksize\r\nSmaller means lee latency</string>
    <string name="bufferCapacityInFramesDescription">Audio Buffer Capacity</string>
    <string name="audioBuffersErrorMessage">Chunksize must be half the audio buffer size or less</string>
    <string name="touchElementDiplay">Touch Elements Display Style</string>
    <string name="settings_connector_display">Show Connectors</string>
    <string-array name="settings_connector_display_types">
        <item>Always</item>
        <item>In edit mode</item>
        <item>Never</item>
    </string-array>
    <string-array name="framesPerDataCallbackValues">
        <item>32</item>
        <item>64</item>
        <item>128</item>
        <item>256</item>
        <item>512</item>
        <item>1024</item>
    </string-array>
    <string-array name="bufferCapacityInFramesValues">
        <item>64</item>
        <item>128</item>
        <item>256</item>
        <item>512</item>
        <item>1024</item>
        <item>2048</item>
    </string-array>
    <string-array name="touchElementDisplayStyle">
        <item>Minimal</item>
        <item>Descriptive</item>
    </string-array>
    <string name="rtpMidiNoteRepeat">RtpMidi Note Repeat</string>
    <string-array name="rtpMidiNoteRepeatValues">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>5</item>
        <item>10</item>
    </string-array>
    <string-array name="numberOfVoices">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
    <string name="sampleLoadPath">Load Path</string>
    <string name="loadPathInternal">Internal/Bundled Samples</string>
    <string name="loadPathExternal">External</string>
    <string name="midiMode">Midi Mode</string>
    <string name="midiHostMode">Host Mode (connected to Keyboard)</string>
    <string name="midiDeviceMode">Device Mode (connected to Computer)</string>
    <string name="availableMidiInDevices">Midi Inputs</string>
    <string name="availableMidiOutDevices">Midi Outputs</string>
    <string name="exportToJson">Export</string>
    <string name="importFromJson">Import</string>
    <string name="shareScenes">share via</string>
    <string name="exportSuccessful">Export successful</string>
    <string name="importSuccessful">Import successful</string>
    <string name="selectFolder">Select Folder to save Scenes</string>
    <string name="selectImportFile">Select File to Import</string>
    <string name="importErrorMessage">Error Importing Scenes</string>
    <string name="importFileNotFound">No File to import found</string>
    <string name="descrColorOfTheTouchElement">Color of the Touch Element</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="rtpmidi">RTP/Apple Midi</string>
    <string name="midiChannel">Midi Channel</string>
    <string name="midiCCA">Midi CC A</string>
    <string name="midiCCB">Midi CC B</string>
    <string name="ipAdress">IP Address</string>
    <string name="rtpMidiPorts">RTP Midi Ports</string>
    <string name="offline">offline</string>
    <string name="installerTitle">Preset Installer</string>
    <string name="installerPerformInstall">Install Presets?</string>
    <string name="installerAddDrumSamples">Download drum samples?</string>
    <string name="installerOverridePresets">Override existing presets?</string>
    <string name="installerInstallWithSamples">Installing Presets with samples</string>
    <string name="installerDownloadingSamples">Downloading Samples</string>
    <string name="installerUnpackingSamples">Unpacking Samples</string>
    <string name="installerDownloadFailed">Download failed</string>
    <string name="monophonic">Mono</string>
    <string name="polyphonic">Poly</string>
    <string name="alignleft">align left</string>
    <string name="alignright">align right</string>
    <string name="aligntop">align top</string>
    <string name="alignbottom">align bottom</string>
    <string name="distributevertical">distribute vertical</string>
    <string name="distributehorizontal">distribute horizontal</string>
    <string name="pitchBendAmount">PB Amt.</string>
    <string name="pitchBendOrientation">Pitchbend Orientation</string>
    <string name="horizontal">Horizontal</string>
    <string name="vertical">Vertical</string>
    <string name="touchModeToggled">Toggled</string>
</resources>