<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <item
        android:id="@+id/menitem_label_editscene"
        android:title="@string/editToggleEdit"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/menuitem_editscene"
        android:title="@string/editToggleEdit"
        app:actionViewClass="androidx.appcompat.widget.SwitchCompat"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/menuitem_scenes"
        android:title="@string/scenes"
        app:actionViewClass="android.widget.Spinner"
        android:actionLayout="@android:layout/simple_spinner_dropdown_item"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/menuitem_play"
        android:title="@string/menuitem_playpage"
        android:icon="@drawable/playpageicon"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/menuitem_instruments"
        android:icon="@drawable/instrumenteditpage"
        app:showAsAction="always"
        android:title="@string/menuitem_soundgenerator" />
    <item
        android:id="@+id/menuitem_scenesedit"
        android:icon="@drawable/scene"
        android:title="@string/scenes"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/menuitem_settings"
        android:icon="@drawable/settingspage"
        app:showAsAction="always"
        android:title="@string/settings"
        >

    </item>
</menu>