<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="358dp"
    android:layout_height="match_parent"
    android:theme="@style/Theme.TouchSampleSynth.Instrument"
    android:orientation="vertical"
    tools:context=".fragments.SamplerFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:backgroundTintMode="src_in"
        android:fontFamily="monospace"
        android:paddingTop="10dp"
        android:paddingBottom="6dp"
        android:text="@string/sampler_name"
        android:textColor="?attr/instrumentPageTitleTextColor"
        android:textSize="20sp">
    </TextView>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/sampler_switch_mode_looped"
                android:layout_gravity="center_vertical">

            </androidx.appcompat.widget.SwitchCompat>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="18dp"
                android:layout_column="2"
                android:layout_margin="10dp"
                android:gravity="center_vertical"
                android:labelFor="@id/sampler_switch_mode_looped"
                android:text="@string/sampler_loop_switch" />
        </TableRow>
        <TableRow android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/sampler_switch_mode_triggered"
                android:layout_gravity="center_vertical"
                >

            </androidx.appcompat.widget.SwitchCompat>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="18dp"
                android:layout_margin="10dp"
                android:text="@string/sampler_triggered_switch"
                android:labelFor="@id/sampler_switch_mode_triggered"
                android:layout_column="2" />
        </TableRow>
    </TableLayout>
    <TableLayout
        android:baselineAligned="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1"
        android:theme="@style/Theme.TouchSampleSynth.Instrument">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <SeekBar
            android:id="@+id/seekBarTouchToVolume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:max="1000"
            android:layout_gravity="center_vertical"
            android:layout_column="1"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:progress="0"
            android:thumb="?attr/sliderDrawable"
            />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="18dp"
                android:layout_margin="10dp"
                android:text="@string/touch_to_volume"
                android:labelFor="@id/seekBarAttack"
                android:layout_column="2"
                />
        </TableRow>
    </TableLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sampler_button_load_sample"
        android:text="@string/sampler_load_sample"
        />
    <ch.sr35.touchsamplesynth.views.WaveDisplay
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:id="@+id/sampler_wave_viewer"
        >

    </ch.sr35.touchsamplesynth.views.WaveDisplay>
</LinearLayout>