<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="358dp"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/Theme.TouchSampleSynth.Instrument"
    tools:context=".fragments.SineMonoSynthFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:backgroundTintMode="src_in"
        android:fontFamily="monospace"
        android:paddingTop="10dp"
        android:paddingBottom="6dp"
        android:text="@string/sine_mono_synth_name"
        android:textColor="?attr/instrumentPageTitleTextColor"
        android:textSize="20sp">

    </TextView>

    <TableLayout
        android:baselineAligned="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1"
        >
        <TableRow>

            <SeekBar
                android:id="@+id/seekBarAttack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="center_vertical"
                android:max="1000"
                android:min="1"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:thumb="?attr/sliderDrawable" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="18dp"
                android:layout_margin="10dp"
                android:text="@string/synth_attack"
                android:labelFor="@id/seekBarAttack"
                />
        </TableRow>
        <TableRow>

            <SeekBar
                android:id="@+id/seekBarDecay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="center_vertical"
                android:max="1000"
                android:min="1"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:thumb="?attr/sliderDrawable" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="18dp"
                android:layout_margin="10dp"
                android:labelFor="@id/seekBarDecay"
                android:text="@string/synth_decay" />
        </TableRow>
        <TableRow>
            <SeekBar
                android:id="@+id/seekBarSustain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="center_vertical"
                android:max="1000"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:thumb="?attr/sliderDrawable" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="18dp"
                android:layout_margin="10dp"
                android:labelFor="@id/seekBarSustain"
                android:text="@string/synth_sustain" />
        </TableRow>
        <TableRow>

            <SeekBar
                android:id="@+id/seekBarRelease"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="center_vertical"
                android:max="1000"
                android:min="1"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:progress="0"
                android:thumb="?attr/sliderDrawable" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="18dp"
                android:layout_margin="10dp"
                android:labelFor="@id/seekBarRelease"
                android:text="@string/synth_release" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <SeekBar
                android:id="@+id/seekBarTouchToVolume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:max="1000"
                android:layout_gravity="center_vertical"
                android:layout_column="1"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:progress="0"
                android:thumb="?attr/sliderDrawable"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="18dp"
                android:layout_margin="10dp"
                android:text="@string/touch_to_volume"
                android:labelFor="@id/seekBarAttack"
                android:layout_column="2"
                />
        </TableRow>
    </TableLayout>

</LinearLayout>