<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dialogs.DefaultScenesInstall">

    <TextView
        android:id="@+id/installerTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/installerTitle"
        android:padding="12dp"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/installerText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintTop_toBottomOf="@id/installerTitle"

        />

    <Button
        android:id="@+id/installerYes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/installerText"
        android:text="@string/yes" />

    <Button
        android:id="@+id/installerNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no"
        app:layout_constraintStart_toEndOf="@id/installerYes"
        app:layout_constraintTop_toBottomOf="@id/installerText" />


    <ProgressBar
        android:id="@+id/installerProgressbar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:indeterminate="false"
        android:max="1000"
        android:min="0"
        android:progress="650"
        android:progressTint="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/installerYes" />

</androidx.constraintlayout.widget.ConstraintLayout>