<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
>
    <androidx.recyclerview.widget.RecyclerView

        android:id="@+id/sceneList"
        android:name="ch.sr35.touchsamplesynth.SceneFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="48dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/sceneList"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"

        app:layoutManager="LinearLayoutManager"
        tools:context=".fragments.SceneFragment"
        tools:listitem="@layout/scene_item" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sceneList"
        >

        <Button
            android:id="@+id/sceneAdd"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp"
            android:text="@string/add" />

        <Button
            android:id="@+id/sceneExport"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exportToJson"
            tools:layout_editor_absoluteX="239dp"
            tools:layout_editor_absoluteY="687dp" />

        <Button
            android:id="@+id/sceneImport"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/importFromJson"
            tools:layout_editor_absoluteX="323dp"
            tools:layout_editor_absoluteY="692dp" />


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>
