<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="358dp"
    android:layout_height="match_parent"
    android:background="?attr/instrumentBackgroundColor"
    android:orientation="vertical"
    tools:context=".fragments.SimpleSubtractiveSynthFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:backgroundTintMode="src_in"
        android:fontFamily="monospace"
        android:paddingTop="10dp"
        android:paddingBottom="6dp"
        android:text="@string/simple_subtractive_synth_name"
        android:textColor="?attr/instrumentPageTitleTextColor"
        android:textSize="20sp">

    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:fontFamily="monospace"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:paddingStart="6dp"
        android:paddingEnd="0dp"
        android:textSize="14sp"
        android:textColor="?attr/instrumentPageTitleTextColor"
        android:text="@string/volume_envelope"
        />
    <TableLayout
        android:baselineAligned="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1"
        android:theme="@style/Theme.TouchSampleSynth.Instrument"
        >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <SeekBar
                android:id="@+id/seekBarAttack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="center_vertical"
                android:max="1000"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:progressBackgroundTintMode="src_over"
                android:progressTintMode="src_over"
                android:thumb="?attr/sliderDrawable" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="18dp"
                android:layout_margin="10dp"
                android:text="@string/synth_attack"
                android:labelFor="@id/seekBarAttack"
                android:layout_column="2"
                 />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <SeekBar
                android:id="@+id/seekBarDecay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:thumb="?attr/sliderDrawable"
                android:progressTint="#454545"
                android:layout_column="1"
                android:layout_gravity="center_vertical"
                android:max="1000" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="18dp"
                android:layout_margin="10dp"
                android:text="@string/synth_decay"
                android:labelFor="@id/seekBarDecay"
                android:layout_column="2"
                />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <SeekBar
                android:id="@+id/seekBarSustain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:thumb="?attr/sliderDrawable"
                android:progressTint="#454545"
                android:layout_column="1"
                android:layout_gravity="center_vertical"
                android:max="1000" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="18dp"
                android:layout_margin="10dp"
                android:text="@string/synth_sustain"
                android:labelFor="@id/seekBarSustain"
                android:layout_column="2"
                />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <SeekBar
                android:id="@+id/seekBarRelease"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:thumb="?attr/sliderDrawable"
                android:progressTint="#454545"
                android:layout_column="1"
                android:layout_gravity="center_vertical"
                android:max="1000" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="18dp"
                android:layout_margin="10dp"
                android:text="@string/synth_release"
                android:labelFor="@id/seekBarRelease"
                android:layout_column="2"
                />
        </TableRow>
    </TableLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:fontFamily="monospace"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:paddingStart="6dp"
        android:paddingEnd="0dp"
        android:textSize="14sp"
        android:textColor="?attr/instrumentPageTitleTextColor"
        android:text="@string/moog_filter"

        />
    <TableLayout
        android:baselineAligned="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1"
        android:theme="@style/Theme.TouchSampleSynth.Instrument"
        >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <SeekBar
                android:id="@+id/seekBarCutoff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:thumb="?attr/sliderDrawable"
                android:layout_column="1"
                android:layout_gravity="center_vertical"
                android:max="1000" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="18dp"
                android:layout_margin="10dp"
                android:text="@string/filter_cutoff"
                android:labelFor="@id/seekBarCutoff"
                android:layout_column="2"
                />
        </TableRow>
            <TableRow>
            <SeekBar
                android:id="@+id/seekBarResonance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:thumb="?attr/sliderDrawable"
                android:progressTint="#454545"
                android:layout_column="1"
                android:layout_gravity="center_vertical"
                android:max="1000" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="18dp"
                android:layout_margin="10dp"
                android:text="@string/filter_resonance"
                android:labelFor="@id/seekBarResonance"
                android:layout_column="2"
                />
            </TableRow>

    </TableLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:fontFamily="monospace"
        android:paddingTop="6dp"
        android:labelFor="@id/seekBarCutoffModulation"
        android:paddingBottom="6dp"
        android:paddingStart="6dp"
        android:paddingEnd="0dp"
        android:textSize="14sp"
        android:textColor="?attr/instrumentPageTitleTextColor"
        android:text="@string/cutoff_modulation"
        />
    <TableLayout
        android:baselineAligned="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1"
        android:theme="@style/Theme.TouchSampleSynth.Instrument"
        >
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <SeekBar
                android:id="@+id/seekBarCutoffModulation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:thumb="?attr/sliderDrawable"
                android:progressTint="#454545"
                android:layout_column="1"
                android:layout_gravity="center_vertical"
                android:max="1000" />
        </TableRow>
    </TableLayout>
</LinearLayout>